// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> when receives a header block with className renders a <h2 className> 1`] = `
<h2
  className="header-block"
>
  Editor.js
</h2>
`;

exports[`<Header /> when receives an header level 2 block renders a <h2> tag 1`] = `
<h2>
  Editor.js
</h2>
`;
